# CHIP-8

./: .gitignore  CMakeLists.txt
src/: main.cpp  playground.cpp
src/memory/: memory.cpp  memory.h
